--- a/src/Landing/Landing.scss
+++ b/src/Landing/Landing.scss
@@ -2,19 +2,21 @@
 @import '~@styles/colors';
 
 :global .webp-supported :local .Half {
-  &::after {
-    background-image: url('./assets/half-bg-2.webp');
+  &Cover {
+    &::after {
+      background-image: url('./assets/half-bg-2.webp');
 
-    @include breakpoints(mobile) {
-      background-image: url('./assets/half-bg-2_mobile.webp');
+      @include breakpoints(mobile) {
+        background-image: url('./assets/half-bg-2_mobile.webp');
+      }
     }
-  }
 
-  &::before {
-    background-image: url('./assets/half-bg-1.webp');
+    &::before {
+      background-image: url('./assets/half-bg-1.webp');
 
-    @include breakpoints(mobile) {
-      background-image: url('./assets/half-bg-1_mobile.webp');
+      @include breakpoints(mobile) {
+        background-image: url('./assets/half-bg-1_mobile.webp');
+      }
     }
   }
 }
