--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -8,7 +8,7 @@ $background-darken: #ababab;
 $color-dark: #2a2628;
 $color-blue: #5c68ec;
 $color-brown: #887466;
-$color-green: #55b242;
+$color-green: #67c654; // #55b242;
 $color-orange: #f8a652;
 $color-pink: #d13bfb; // #cd6cee
 $color-purple: #8c67f4;
