--- a/src/Core/components/ContextMenu/ContextMenu.scss
+++ b/src/Core/components/ContextMenu/ContextMenu.scss
@@ -5,6 +5,7 @@
 }
 
 .Card {
-  border: 2px solid lighten($color-blue, 20);
+  border: 2px solid $background-medium;
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, .1);
+  display: flex;
 }
