Added content block.

--- a/src/Flow/components/Block/Block.scss
+++ b/src/Flow/components/Block/Block.scss
@@ -4,7 +4,7 @@
   &:hover,
   &.RootIsSelected {
     .Card {
-      box-shadow: 0 0 0 3px rgba($color, 1);
+      box-shadow: 0 0 0 3px rgba($color, .6);
     }
   }
 }
