--- a/src/Core/components/ContextMenu/components/Column.scss
+++ b/src/Core/components/ContextMenu/components/Column.scss
@@ -1,6 +1,8 @@
 @import '~@styles/colors';
 
 .Root {
+  flex: 1 1 auto;
+
   &:not(:first-child) {
     border-left: 2px solid $background-light;
     margin: 0 0 0 20px;
