--- a/src/Flow/pages/Builder/Builder.scss
+++ b/src/Flow/pages/Builder/Builder.scss
@@ -1,3 +1,11 @@
 .Container {
   background: transparent;
 }
+
+.Header {
+  align-items: center;
+  display: flex;
+  height: 88px;
+  justify-content: space-between;
+  padding: 0 32px;
+}
