--- a/src/Flow/pages/Builder/Edge/Edge.scss
+++ b/src/Flow/pages/Builder/Edge/Edge.scss
@@ -36,6 +36,7 @@
     }
 
     &Selected {
+      filter: drop-shadow(0 0 3px rgba($color-blue, .2));
       stroke: $color-blue !important;
     }
   }
