--- a/src/Core/components/ContextMenu/components/Item.scss
+++ b/src/Core/components/ContextMenu/components/Item.scss
@@ -29,11 +29,12 @@
 }
 
 .Icon {
-  flex: 0 0 24px;
+  // background: transparent !important;
+  flex: 0 0 28px;
   font-size: 12px;
-  height: 24px;
+  height: 28px;
   margin: 0 0 0 -8px;
-  width: 24px;
+  width: 28px;
 }
 
 .Title {
