Added channels support for flows.

--- a/src/Flow/pages/Flows/Flows.scss
+++ b/src/Flow/pages/Flows/Flows.scss
@@ -1,3 +1,11 @@
 .Root {
   margin: 0 40px 40px 40px;
 }
+
+.Channels {
+  display: flex;
+
+  & > *:not(:first-child) {
+    margin: 0 0 0 12px;
+  }
+}
