Added randomized bloks.

--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -11,7 +11,7 @@ $color-brown: #887466;
 $color-green: #67c654; // #55b242;
 $color-orange: #f8a652;
 $color-pink: #d13bfb; // #cd6cee
-$color-purple: #8c67f4;
+$color-purple: #6e43f2;
 $color-red: #ee6c7e;
 $color-sky: #0089ff;
 $color-yellow: #ffe26c;
