--- a/src/Flow/containers/Builder/Block/Randomize/Variant/Variant.scss
+++ b/src/Flow/containers/Builder/Block/Randomize/Variant/Variant.scss
@@ -1,12 +1,9 @@
 @import '~@styles/colors';
 
-.Actions {
-  margin: 20px 0 0;
-}
-
 .Control {
   align-items: center;
   display: flex;
+  margin: 0 0 20px;
 }
 
 .Handle {
