--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -6,13 +6,13 @@ $background-darken: #ababab;
 
 // Colors
 $color-dark: #2a2628;
-$color-blue: #5c68ec;
+$color-blue: #3e4df2;
 $color-brown: #887466;
-$color-green: #67c654; // #55b242;
-$color-orange: #f8a652;
+$color-green: #55b242; // #55b242;
+$color-orange: #fe9e3b;
 $color-pink: #d13bfb; // #cd6cee
-$color-purple: #6e43f2;
-$color-red: #ee6c7e;
+$color-purple: #9204ea;
+$color-red: #ef2944;
 $color-sky: #0089ff;
 $color-yellow: #ffe26c;
 $color-white: #fff;
