--- a/src/Flow/containers/Builder/Block/Block.scss
+++ b/src/Flow/containers/Builder/Block/Block.scss
@@ -9,7 +9,7 @@
 
   &.RootIsSelected {
     .Card {
-      background: rgba(lighten($color, 32), .9);
+      background: rgba(mix(white, $color, 88%), .9);
       box-shadow: 0 0 0 3px rgba($color, .8);
     }
   }
