--- a/src/Flow/containers/Builder/Block/Content/Text/Text.scss
+++ b/src/Flow/containers/Builder/Block/Content/Text/Text.scss
@@ -5,6 +5,14 @@
   border: 2px solid $background-light;
   border-radius: 15px;
   padding: 12px;
+
+  &Is {
+    &Editable {
+      .Editor {
+        cursor: text;
+      }
+    }
+  }
 }
 
 .Action {
