--- a/src/Flow/containers/Builder/Block/Content/Text/Text.scss
+++ b/src/Flow/containers/Builder/Block/Content/Text/Text.scss
@@ -5,6 +5,7 @@
   border: 2px solid $background-light;
   border-radius: 15px;
   padding: 12px;
+  position: relative;
 
   &Is {
     &Editable {
@@ -15,9 +16,28 @@
   }
 }
 
-.Action {
-  height: 20px !important;
-  width: 20px !important;
+.Actions {
+  background: $color-dark;
+  border-radius: 8px;
+  display: flex;
+  height: 28px;
+  justify-content: flex-end;
+  margin: 8px 0 0;
+  right: 12px;
+  z-index: 2;
+
+  & > * {
+    background: transparent !important;
+    border-radius: 8px;
+    color: shade($color-white, 700) !important;
+    height: 28px;
+    min-width: 28px;
+    width: 28px;
+
+    &:hover {
+      color: $color-white !important;
+    }
+  }
 }
 
 .Buttons {
