--- a/src/Flow/containers/Builder/Block/Content/Text/Text.scss
+++ b/src/Flow/containers/Builder/Block/Content/Text/Text.scss
@@ -11,41 +11,64 @@
     &Editable {
       .Editor {
         cursor: text;
+        padding: 4px 8px;
+      }
+    }
+
+    &Focused {
+      .Actions {
+        background: $color-blue !important;
+      }
+
+      .Editor {
+        border-color: $color-blue !important;
+      }
+    }
+
+    &Selected {
+      .Editor {
+        background: $color-white;
+        border: 2px solid $background-darken;
+        border-radius: 8px 8px 0 8px;
+        padding: 2px 6px;
       }
     }
   }
 }
 
 .Actions {
-  background: $color-dark;
-  border-radius: 8px;
+  align-items: center;
+  background: $background-darken;
+  border-radius: 0 0 4px 4px;
   display: flex;
-  height: 28px;
-  justify-content: flex-end;
-  margin: 8px 0 0;
-  right: 12px;
-  z-index: 2;
 
   & > * {
     background: transparent !important;
-    border-radius: 8px;
-    color: shade($color-white, 700) !important;
-    height: 28px;
-    min-width: 28px;
-    width: 28px;
-
-    &:hover {
-      color: $color-white !important;
-    }
   }
 }
 
-.Buttons {
-  margin: 16px 0 0;
+.Control {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
 }
 
 .Editor {
   line-height: 24px;
   position: relative;
+  transition: border all .2s;
+  width: 100%;
   z-index: 2;
+}
+
+.Limit {
+  color: $color-white;
+  flex: 0 0 80px;
+  padding: 0 4px;
+}
+
+.Variable {
+  height: 20px;
+  min-width: 28px;
+  width: 28px;
 }
