--- a/src/Flow/builder/Content/Text/Text.scss
+++ b/src/Flow/builder/Content/Text/Text.scss
@@ -3,72 +3,13 @@
 .Root {
   background: $background-lighten;
   border: 2px solid $background-light;
-  border-radius: 15px;
+  border-radius: 16px;
   padding: 12px;
   position: relative;
 
   &Is {
-    &Editable {
-      .Editor {
-        cursor: text;
-        padding: 4px 8px;
-      }
-    }
-
-    &Focused {
-      .Actions {
-        background: $color-blue !important;
-      }
-
-      .Editor {
-        border-color: $color-blue !important;
-      }
-    }
-
     &Selected {
-      .Editor {
-        background: $color-white;
-        border: 2px solid $background-darken;
-        border-radius: 8px 8px 0 8px;
-        padding: 2px 6px;
-      }
+      border: 2px solid $background-darken !important;
     }
   }
-}
-
-.Actions {
-  align-items: center;
-  background: $background-darken;
-  border-radius: 0 0 4px 4px;
-  display: flex;
-
-  & > * {
-    background: transparent !important;
-  }
-}
-
-.Control {
-  align-items: flex-end;
-  display: flex;
-  flex-direction: column;
-}
-
-.Editor {
-  line-height: 24px;
-  position: relative;
-  transition: border all .2s;
-  width: 100%;
-  z-index: 2;
-}
-
-.Limit {
-  color: $color-white;
-  flex: 0 0 80px;
-  padding: 0 4px;
-}
-
-.Variable {
-  height: 20px;
-  min-width: 28px;
-  width: 28px;
 }
